                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.1.0


  *) [TS-2114] buffer_upload plugin defines true and false
    Author: Kit Chan <chanshukit@gmail.com>

  *) [TS-2116] buffer_upload plugin is in the source tree but does not build
    Author: Kit Chan <chanshukit@gmail.com>

  *) [TS-2094] eliminate xcrun warnings at configure time

  *) [TS-2141] Inconsistent euid cause bad mgmtapi/eventapi sockets.

  *) [TS-2137] Use eventfd instread of pthread signal/wait in ATS.

  *) [TS-287] Fix transaction_active_timeout_in does not trigger on the first
   request of a Keep-Alive connection. Author: Li Gang <quehan@taobao.com>.

  *) [TS-2136] Fix the first proxy.config.http.accept_no_activity_timeout is
   invalid.

  *) [TS-2089] Introduce configurable collation preproc threads.

  *) [TS-2126] Avoid unnecessary memory copy in LogHost::write()

  *)[ TS-2096] Improve SSL certificate loading error messages.

  *) [TS-2122] Enlarge the 64KB limitation of log buffer size.

  *) [TS-2061] LogFile::write_ascii_logbuffer3() can silently drop log
   entries.

  *) [TS-2123] Remove useless max_entries_per_buffer option.


Changes with Apache Traffic Server 4.0.0

  *) [TS-2143] Remove alarm email address support (and config).

  *) [TS-2127] Move hostdb.config to var/trafficserver, together with with the
   host.db itself.

  *) [TS-1823] remap.config line continuation support
    Author: Jim Riggs <jim@riggs.me>

  *) [TS-1597] Document remap.config filters
    Author: Jim Riggs <jim@riggs.me>

  *) [TS-2132, TS-2131] ${libexecdir} and $(localstatedir} chowned
   needlessly chowned to to ATS' user.
   Author: Tomasz Kuzemko <tomasz@kuzemko.net>

  *) [TS-2130] pthread_setname_np() detection fails on various platforms.

  *) [TS-2129] Check for existence of ExtUtils::MakeMaker.

  *) [TS-2128] Don't link libGeoIP.so.1 into binaries

  *) [TS-2112] Make libloader compile by default.
