@@ -113,7 +113,8 @@ typedef enum
   CMD_CONFIG_HTTP_KEEP_ALIVE_TIMEOUT_OUT,
   CMD_CONFIG_HTTP_INACTIVE_TIMEOUT_IN,
   CMD_CONFIG_HTTP_INACTIVE_TIMEOUT_OUT,
-  CMD_CONFIG_HTTP_ACTIVE_TIMEOUT_IN,
+  CMD_CONFIG_HTTP_HEADER_ACTIVE_TIMEOUT_IN,
+  CMD_CONFIG_HTTP_REQUEST_ACTIVE_TIMEOUT_IN,
   CMD_CONFIG_HTTP_ACTIVE_TIMEOUT_OUT,
   CMD_CONFIG_HTTP_REMOVE_FROM,
   CMD_CONFIG_HTTP_REMOVE_REFERER,
