@@ -420,6 +420,7 @@ struct OverridableHttpConfigParams {
       cache_guaranteed_min_lifetime(0), cache_guaranteed_max_lifetime(31536000), cache_max_stale_age(604800),
       keep_alive_no_activity_timeout_in(115), keep_alive_no_activity_timeout_out(120),
       transaction_no_activity_timeout_in(30), transaction_no_activity_timeout_out(30),
+      transaction_header_active_timeout_in(0), transaction_request_active_timeout_in(0),
       transaction_active_timeout_out(0), origin_max_connections(0),
       connect_attempts_max_retries(0), connect_attempts_max_retries_dead_server(3),
       connect_attempts_rr_retries(3), connect_attempts_timeout(30),
@@ -558,6 +559,8 @@ struct OverridableHttpConfigParams {
   MgmtInt keep_alive_no_activity_timeout_out;
   MgmtInt transaction_no_activity_timeout_in;
   MgmtInt transaction_no_activity_timeout_out;
+  MgmtInt transaction_header_active_timeout_in;
+  MgmtInt transaction_request_active_timeout_in;
   MgmtInt transaction_active_timeout_out;
   MgmtInt origin_max_connections;
 
@@ -669,7 +672,8 @@ public:
   MgmtByte session_auth_cache_keep_alive_enabled;
   MgmtInt origin_server_pipeline;
   MgmtInt user_agent_pipeline;
-  MgmtInt transaction_active_timeout_in;
+  MgmtInt transaction_header_active_timeout_in;
+  MgmtInt transaction_request_active_timeout_in;
   MgmtInt accept_no_activity_timeout;
 
   ////////////////////////////////////
@@ -902,7 +906,8 @@ HttpConfigParams::HttpConfigParams()
     session_auth_cache_keep_alive_enabled(1),
     origin_server_pipeline(1),
     user_agent_pipeline(8),
-    transaction_active_timeout_in(900),
+    transaction_header_active_timeout_in(0),
+    transaction_request_active_timeout_in(0),
     accept_no_activity_timeout(120),
     parent_connect_attempts(4),
     per_parent_connect_attempts(2),
