@@ -2,6 +2,9 @@
 Changes with Apache Traffic Server 4.1.0
 
 
+  *) [TS-2107] split proxy.config.http.transaction_active_timeout_in to proxy.config.http.transaction_header_timeout_in
+     and proxy.config.http.transaction_request_timeout_in.
+
   *) [TS-2114] buffer_upload plugin defines true and false
     Author: Kit Chan <chanshukit@gmail.com>
 
